# TwisterLab

./: .continueignore  .coverage  .dockerignore  .env.example  .env.prod  .env.prod.example  .env.production.example  .env.staging.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  .tmp_check_ports.py  AGENTS_REAL_WORKING_SUMMARY.md  AGENT_OLLAMA_INTEGRATION_PLAN.md  API_DOCUMENTATION.md  ARCHITECTURE_OLLAMA.md  ARCHITECTURE_V2_VISION.md  AUTONOMOUS_AGENTS_INTEGRATION.md  AUTONOMOUS_AGENTS_README.md  AUTONOMOUS_AGENTS_V2_README.md  BONNE_NUIT.md  BRANCH_NOTES.md  CHANGELOG.md  CI_CD_README.md  CLASSIFIER_AGENT_LLM_INTEGRATION_SUCCESS.md  CLAUDE_STRATEGIC_PROMPT.md  CONTINUE_CONFIG_V2_SUMMARY.md  CONTINUE_IDE_CONFIG_COMPLETE.md  CONTINUE_IDE_ORCHESTRATION.md  CONTINUE_MCP_GUIDE.md  CONTINUE_MCP_TROUBLESHOOTING.md  CONTINUE_PROMPTS_READY.md  CONTINUE_PROMPTS_SYSTEM.md  CONTRIBUTING.md  COPILOT_TACTICAL_PROMPT.md  DEPLOYMENT.md  DEPLOYMENT_FINAL_SUMMARY.md  DEPLOYMENT_REPORT_v3.2.md  (+356 more)
.claude/: settings.local.json
.continue/: AGENTS_REGISTRY.md  CODE_QUALITY_FIXES_v1.0.1.md  CONFIGURATION_COMPLETE.md  CORRECTION_COMPLETE.md  FINAL_SUMMARY.md  FORMAT_CORRECT_CONTINUE.md  LOCAL_CONFIG_JSON_FORMAT.md  MCP_SERVER_WORKING.md  MCP_TOOLS_GUIDE.md  MCP_UPGRADE_v2.0.0.md  QUICK_START.md  README.md  README_SETUP_COMPLETE.md  README_TwisterLab_MCP.md  README_YAML_CONFIG.md  RESOLUTION_COMPLETE.md  SETUP_GUIDE.md  SETUP_GUIDE_v1.0.1.md  UNIFICATION_COMPLETE.md  VERIFICATION_MCP.md  config.backup.json  config.corrupted-.yaml  config.edgeserver.yaml  config.json  config.yaml  list_real_agents.ps1  mcp-tools-config.json  mcp.json  test_config.py
.copilot/: COPILOT_NEXT_TASKS.md  INSTRUCTIONS_DONNEES.md  README.md  README_USER.md  STATUS_QUICK.md  VERIFICATION_COMPLETE.md  VERIFICATION_RESULT.md  audit_phase_1_report.md  claude_instructions_execution.md  copilot_blocage.md  mcp_commands.yaml  mcp_config.json  rapport_final_deploiement.md  system_prompt.md
.github/: PULL_REQUEST_TEMPLATE.md  ai-coding-guide.md  copilot-instructions.md  copilot-prompt-next-steps.md  dependabot.yml
.venv_new/: pyvenv.cfg
agents/: __init__.py  base.py  config.py  metrics.py  registry.py  twisterlang_agent_integration.py
alembic/: env.py  models.py
api/: auth.py  auth_hybrid.py  main.py  routes_mcp_real.py  schemas.py  security.py
archive/: AUDIT_SNAPSHOT.md  DEPLOYMENT_COMPLETE.md  RELEASE_NOTES_v1.0.0.md  RESUME_SNAPSHOT.md  audit_report_monitoring_stack.md  mcp_test_report.md
backup/: README.md  automated_backup.py  backup_config.py  manage_backup_service.ps1  start_backup_service.py
backups/: backup_twisterlab.ps1  restore_twisterlab.ps1  twisterlab_backup_20251111_062631.json
cli/: twisterlab.py
config/: claude_desktop_config.json  continue-config.yaml
core/: __init__.py  twisterlang_decoder.py  twisterlang_encoder.py  twisterlang_sync.py
deploy/: Dockerfile.api  api-docs.html  openapi.json  pod-openapi.json  pyproject.toml  requirements.txt
deployment/: Dockerfile.prod  deploy.sh  monitor.sh
docs/: API.md  API_ORCHESTRATOR.md  API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  DOCS_CONSOLIDATION_PLAN.md  GETTING_STARTED.md  GETTING_STARTED_draft.md  HTTPS_LETSENCRYPT_GUIDE.md  OPERATIONS.md  OPERATIONS_MANUAL.md  PHASE1_AZURE_AD_AUTH.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READINESS_STATUS.md  README.md  SECURITY.md  SYSTEM_PROMPT_TECHNICAL_EXCELLENCE.md  TESTING_GUIDE.md  TROUBLESHOOTING.md
infrastructure/: README.md
mcp/: client.py
monitoring/: alert_rules.yml  alertmanager.yml  blackbox.yml  docker-compose.monitoring.yml  prometheus-standalone.yml  prometheus.production.yml  prometheus.staging.yml  prometheus.yml  setup_monitoring.ps1  start_monitoring.ps1
sanitized_archives/: audit_ollama_results_20251111_195153.txt
scripts/: agent_autonomous_missions.ps1  agent_learning_missions.ps1  agent_learning_simple.ps1  agent_load_test.py  check_pytestmark_duplicates.py  check_session_local.py  ci_secret_scan.py  configure_ollama_gpu.ps1  continuous_agent_testing.py  create_branch_protection.ps1  create_sanitized_branch.ps1  db_debug.py  debug_app_routes.py  debug_engine.py  debug_real_health.py  debug_ui.py  deploy_and_test_all.ps1  deploy_complete_monitoring.ps1  deploy_exporters.sh  deploy_exporters_direct.ps1  deploy_exporters_remote.ps1  deploy_real_agents.ps1  deploy_real_agents_simple.ps1  deploy_real_agents_v2.ps1  deploy_system_exporters.ps1  deploy_system_exporters.sh  deploy_traefik_metrics.ps1  dev-setup.ps1  dev-setup.sh  diagnose_dashboard.py  docker_hub_login.sh  fix_code_quality.ps1  fix_dashboard_datasource.py  fix_grafana_dashboard.ps1  fix_missing_exporters.py  fix_postgres_exporter_auth.sh  generate-secrets.ps1  import_dashboard_to_grafana.py  inspect_import.py  install_playwright.ps1  (+30 more)
temp_patch/: api_main_original.py  patch_script.py
test_backups/: twisterlab_backup_20251112_044449.json
tests/: conftest.py  load_test_final.py  security_audit.py  smoke_tests_staging.py  test_agent_communication.py  test_agents_autonomous.py  test_agents_integration_full_system.py  test_autonomous_integration.py  test_azure_ad_auth.py  test_backup_agent.py  test_backup_api.py  test_backup_retention_smoke.py  (+34 more)
(+475 files in other folders)
